--- a/font.css
+++ b/font.css
@@ -1,7 +1,7 @@
 @font-face 
 {
     font-family: 'TT Lakes';
-    src: url(font\TTLakes-Regular.woff) format("truetype");
+    src: url(font/TTLakes-Regular.woff) format("truetype");
     font-weight:normal;
     font-style: normal;
 }
@@ -9,7 +9,7 @@
 @font-face 
 {
     font-family: 'TT Lakes';
-    src: url(font/TTLakesCondensed-Bold.woff) format("truetype");
+    src: url(font/TTLakes-Bold.woff) format("truetype");
     font-weight:bold;
     font-style: normal;
 }
@@ -17,7 +17,7 @@
 @font-face 
 {
     font-family: 'TT Lakes';
-    src: url(font/TTLakes-Thin.woff) format("truetype");
+    src: url(font/TTLakes-Medium.woff) format("truetype");
     font-weight:300;
     font-style: italic;
 }
@@ -25,7 +25,7 @@
 @font-face 
 {
     font-family: 'TT Lakes Medium';
-    src: url(font/TTLakes-Medium.woff) format("truetype");
+    src: url(font/TTLakes-Regular.woff) format("truetype");
     font-weight: 500;
     font-style: normal;
 }
